--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
 
         <div class="box">
-            <img src="./media/sportmen.jpg" alt="png" width="100%" height="300px">
+            <img src="./media/mec.jpg" alt="png" width="100%" height="300px">
       </div>
 
         <section>
